-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.2
-
-
b92724a1b (dev), 13ddcc46d (6.10), 40f2501e1 (tqtc/lts-6.8)
If processEvents is called on QMenu Action trigger. It crashes the application.
This works with Qt6.8.1. Attached example reproduces this.
Steps:
Run the example
right click to get context menu and then inside submenu click "do something"
Observe Crash.
- relates to
-
QTBUG-132912 [REG 6.8.1->6.9.0 beta1&2](Windows/Linux X11) Designer crashes when dragging OpenGLWidget, QQuickWidget or QWebEngineView to canvas
-
- Closed
-
-
QTBUG-140132 Crash after deleting a popup menu in modal dialog event processing
-
- Closed
-
- resulted from
-
QTBUG-131664 QApplication in inPopupMode bug popupWindow is not a widget window will cause a coredump
-
- Closed
-